that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
See the GNU General Public License for more details. You should have received a copy of the GNU General  Public License along with this program. 
If not, see <http://www.gnu.org/licenses/>.

Version 3.4

Improvement for delete: Support for deleting 3000 objects at a time. The old value was 500.
GUI icon alignment.

Version 3.3

Fixed horizontal scrollbar distorting the GUI.
Icon alignment under the Sync tab. 
Resized search bar icon.
Added GPL v3 license.
Music player does not set the mp3 as public anymore.
Fixed a bug with versioning to support downloading multiple versions of files.
Bug fix for "Delete every object and version". Faster and more stable.
Encryption for Uploads.
Support for Folders and files with the name "null".
Removed "Selected Bucket" from Sync and Upload tabs.
Added "Current Bucket" above search bar.
GUI resized to fit on smaller screen.
GUI no longer moves to the top left of the screen after selecting an account.

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and lifecycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.

How to migrate data between S3 accounts:

1. Load the destination account and click "Set as migration Account" under Settings.
2. Create the destination bucket on the destination account.
3. Load the origin S3 account and select the bucket to transfer to the new S3 account.
4. Under the "Tools" menu, select "Migrate bucket to another S3 account".
5. Type in the destination bucket name and click "Start Bucket Migration".
6. Wait for transfers to complete.