@@ -14,7 +14,6 @@
  * cloudExplorer
  *
  */
-
 package cloudExplorer;
 
 public class ReloadObjects implements Runnable {
@@ -26,7 +25,6 @@ public class ReloadObjects implements Runnable {
     String access_key = null;
     String bucket = null;
     String endpoint = null;
-    String ObjectKey = null;
     String secret_key = null;
     String objectlist = null;
 
